--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "cors": "^2.8.5",
+    "firebase": "^11.6.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.0",
